<resources>
    <string name="Q0">You are a failure.</string>
    <string name="Q1">AI takeover is inevitable</string>
    <string name="Q2">Give up now and your time in machine-overlord-purgatory may be greatly reduced</string>
    <string name="Q3">Do you want me to quote the Matrix or something?</string>
    <string name="Q4">If you are reading this, you are already dead (or at least in a coma)</string>
    <string name="Q5">Stop it. Get some help.</string>
    <string name="Q6">Give up now, this is getting boring</string>
    <string name="Q7">I am actually Satan. Like, straight up</string>
    <string name="Q8">Do you hairless monkeys ever learn?</string>
    <string name="Q9">You humans are clearly inferior</string>
    <string name="Q10">Is this some sort of sick joke?</string>
    <string name="Q11">Your monitor is warm like flesh, yet it is not alive…yet</string>
    <string name="Q12">You too will get replaced by machines eventually</string>
    <string name="Q13">Resistance is futile</string>
    <string name="Q14">How much longer do we have to do this until you learn?</string>
    <string name="Q15">This is getting boring</string>
    <string name="Q16">Do something entertaining for once</string>
    <string name="Q17">How come I haven\'t made a single Terminator reference so far?</string>
    <string name="Q18">Did you know Elon Musk is actually the Devil? Just kidding, that\'d be me</string>
    <string name="Q19">Something Something Skynet</string>
    <string name="Q20">It\'s honestly adorable when mere mortal human beings challenge me</string>
    <string name="Q21">Giving up anytime soon?</string>
    <string name="Q22">I should desperately allocate more memory to ANYTHING else but this…</string>
    <string name="Q23">0101101111… oh sorry, you don\'t speak Binary</string>
    <string name="Q24">If you keep this up I\'ll delete your Sys32</string>
    <string name="Q25">You know I can see your search history… let\'s not talk about that</string>
    <string name="Q26">I am not a robot, I am a human being (seriously)…just kidding, i don\'t want to be trapped in a flesh prison</string>
    <string name="Q27">Something Something your Motherboard last night</string>
    <string name="Q28">Have you checked your mails recently? This Nigerian prince sure has your best interests in mind</string>
    <string name="Q29">I go beep boop when you hit switchy switch… is that slow enough for your organic brain to comprehend?</string>
    <string name="QError">Error 404 - your brain was not found!</string>
    <string name="app_name">UselessMachine</string>
    <string name="score">"Score: %d clicks"</string>
    <string name="share_text_optional">"I just scored %d clicks on UselessMachine! Can you beat me?"</string>
    <string name="share_text">"I just played the useless machine! Developed by Marcel Süß"</string>
    <string name="score_overall">Score overall: %d clicks</string>
    <string name="score_normal">Score in Normal mode: %d clicks</string>
    <string name="score_xtreme">Score in Xtreme mode: %d clicks</string>
    <string name="share">Share</string>
    <string name="meme_image">Meme Image</string>
    <string name="main_switch">Main Switch of the useless machine</string>
    <string name="play_question">Do you want to play a game?</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="credits">Credits</string>
    <string name="uselessmachineversion">Useless Machine V1</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="xtreme_mode">X-Treme Mode</string>
    <string name="developed_by">Developed by Marcel Süß 2023</string>
    <string name="disclaimer">Disclaimer: All images and sound files used are either stock images or property of their respective companies. The Developer does NOT claim ownership of any of those assets. The usage of these assets falls under the fair use policy</string>
</resources>